--- a/Singolo1.css
+++ b/Singolo1.css
@@ -1,9 +1,10 @@
 
 body{
     font-family: 'Lato';
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     max-width:  1020px;
+    position: relative;
 }
 header{
     background-color: #2D303A;
