--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: 'Lato';
     margin: 0 auto;
@@ -16,17 +18,25 @@ header{
     padding-left: 40px;
     padding-right: 40px;
     border-bottom: 6px solid #323746;
+    position:sticky;
+    top: 0px;
+    z-index: 999;
 }
 .SINGOLO h1{
     font-size: 25px;
     font-weight: 600;
     letter-spacing: -0.4px;
     line-height: 6.32px;
-    text-decoration: none;
-    color: #ffffff;
     text-transform: uppercase;
     cursor: pointer;
     padding-top:  17px;
+}
+.SINGOLO h1 a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.navigation .active{
+    color: #f06c64;
 }
 .singolo-logo::after{
     content:"*";
@@ -141,6 +151,15 @@ nav{
     transform: rotateY(180deg) rotateZ(-90deg);
     z-index: 2;
 }
+
+.prev_button{
+    cursor: pointer;
+}
+.next_button{
+    cursor: pointer;
+}
+
+
 /* Services */
 .services{
     width: 1020px;
@@ -257,6 +276,10 @@ nav{
     margin-left: 42px;
     letter-spacing: -1.5px;
 }
+#portfolio_white {
+    color: #c5c5c5;
+    background-color: #0f0f0f;
+}
 .portfolio_nav input{
     font-size: 12px;
     line-height: 22px;
@@ -270,10 +293,6 @@ nav{
     border: 1px solid #666d89;
     margin-right: 8px;
     padding-bottom: 20px;
-}
-.portfolio_nav .all{
-    color: #c5c5c5;
-    border: 1px solid #c5c5c5;
 }
 
 .portfolio_nav input:hover{
